# Road-Damage-Analysis

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
configs/: default.yaml
src/road_damage_analysis/: __init__.py  aggregation.py  cli.py  config.py  detection.py  geo.py  io_utils.py  pipeline.py  schemas.py  webapp.py
src/road_damage_analysis/collectors/: __init__.py  google_street_view.py
web/: index.html
